--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "a01",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines": {
+    "node": "^15.00.0",
+    "npm": "^7.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -16,5 +20,18 @@
     "jquery": "^3.6.0",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "assignment 1",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mattdfd/Assignment01.git"
+  },
+  "author": "Matt Mikhaiel",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mattdfd/Assignment01/issues"
+  },
+  "homepage": "https://github.com/Mattdfd/Assignment01#readme"
 }
