--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
+    "mongoose": "^6.3.8",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
   },
   "description": "assignment 1",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mattdfd/Assignment01.git"
